contrast issues fixed

--- a/style/banner.css
+++ b/style/banner.css
@@ -35,7 +35,7 @@
     position: relative;
     background: var(--lBlue);
     display: inline-block;
-    color: #fff;
+    color: #000;
     margin-top: 20px;
     padding: 10px 30px;
     font-size: 18px;
