--- a/style/contact.css
+++ b/style/contact.css
@@ -57,7 +57,7 @@
     cursor: pointer;
     text-transform: uppercase;
     letter-spacing: 2px;
-    color: #fff;
+    color: #000;
 }
 
 .contactInfoBx {
