--- a/style/responsive.css
+++ b/style/responsive.css
@@ -125,7 +125,6 @@
         width: 100%;
         padding: 10px;
         border-radius: 10px;
-        color: #fff;
         display: block;
         margin: 20px 0;
         position: relative;
